--- a/index.html
+++ b/index.html
@@ -8,6 +8,26 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+    <header class="header-bg">
+        <div class="header">
+            <a href="./">
+                <img src="./img/svg/bikcraft.svg" alt="Bikcraft">
+            </a>
+            
+            <nav aria-label="primary">
+                <ul class="header-menu">
+                    <li class="header-menu-item">
+                        <a href="./bikes.html">Bicicletas</a>
+                    </li>
+                    <li class="header-menu-item">
+                        <a href="./insurance.html">Seguros</a>
+                    </li>
+                    <li class="header-menu-item">
+                        <a href="./contact.html">Contato</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 </body>
 </html>
