--- a/index.html
+++ b/index.html
@@ -29,5 +29,22 @@
             </nav>
         </div>
     </header>
+
+    <main class="introduction-bg">
+        <div class="introduction">
+            <div class="introduction-content">
+                <h1>Bicicletas feitas sob medida<span>.</span></h1>
+                <p>
+                    Bicicletas elétricas de alta precisão e qualidade, 
+                    feitas sob medida para o cliente. Explore o 
+                    mundo na sua velocidade com a Bikcraft.
+                </p>
+                <a href="./bikes.html">Selecione a sua</a>
+            </div>
+            <div>
+                <img src="./img/jpg/fotos/introducao.jpg" alt="Bicicleta elétrica preta.">
+            </div>
+        </div>
+    </main>
 </body>
 </html>
