--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bikcraft - Bicicletas Elétricas</title>
-    <meta name="description" content="Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.">
+    <meta name="description" content="Bicicletas elétricas de alta precisão e qualidade, 
+    feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.">
+    
     <link rel="stylesheet" href="./css/style.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,7 +19,7 @@
             <a href="./">
                 <img src="./img/svg/bikcraft.svg" alt="Bikcraft">
             </a>
-            
+
             <nav aria-label="primary">
                 <ul class="header-menu">
                     <li class="header-menu-item">
@@ -43,7 +45,7 @@
                     feitas sob medida para o cliente. Explore o 
                     mundo na sua velocidade com a Bikcraft.
                 </p>
-                <a href="./bikes.html">Selecione a sua</a>
+                <a class="button" href="./bikes.html">Selecione a sua</a>
             </div>
             <div>
                 <img src="./img/jpg/fotos/introducao.jpg" alt="Bicicleta elétrica preta.">
