--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </a>
 
             <nav aria-label="primary">
-                <ul class="header-menu">
+                <ul class="header-menu color-00">
                     <li class="header-menu-item">
                         <a href="./bikes.html">Bicicletas</a>
                     </li>
@@ -36,11 +36,11 @@
         </div>
     </header>
 
-    <main class="introduction-bg">
+    <main class="introduction-bg color-00">
         <div class="introduction">
             <div class="introduction-content">
-                <h1>Bicicletas feitas sob medida<span>.</span></h1>
-                <p>
+                <h1 class="large-text">Bicicletas feitas sob medida<span class="color-p01">.</span></h1>
+                <p class="medium-text color-05">
                     Bicicletas elétricas de alta precisão e qualidade, 
                     feitas sob medida para o cliente. Explore o 
                     mundo na sua velocidade com a Bikcraft.
@@ -52,5 +52,7 @@
             </div>
         </div>
     </main>
+
+    <h2 class="large-text">escolha a sua<span class="color-p01">.</span></h2>
 </body>
 </html>
