feat: added the utils typographies to the HTML Structure and CSS Folders

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </a>
 
             <nav aria-label="primary">
-                <ul class="header-menu color-00">
+                <ul class="header-menu font-1-m color-00">
                     <li class="header-menu-item">
                         <a href="./bikes.html">Bicicletas</a>
                     </li>
@@ -39,8 +39,8 @@
     <main class="introduction-bg color-00">
         <div class="introduction">
             <div class="introduction-content">
-                <h1 class="large-text">Bicicletas feitas sob medida<span class="color-p01">.</span></h1>
-                <p class="medium-text color-05">
+                <h1 class="font-1-xxl">Bicicletas feitas sob medida<span class="color-p01">.</span></h1>
+                <p class="font-2-l color-05">
                     Bicicletas elétricas de alta precisão e qualidade, 
                     feitas sob medida para o cliente. Explore o 
                     mundo na sua velocidade com a Bikcraft.
@@ -53,6 +53,6 @@
         </div>
     </main>
 
-    <h2 class="large-text">escolha a sua<span class="color-p01">.</span></h2>
+    <h2 class="font-1-xxl">escolha a sua<span class="color-p01">.</span></h2>
 </body>
 </html>
