--- a/index.html
+++ b/index.html
@@ -53,6 +53,32 @@
         </div>
     </main>
 
-    <h2 class="font-1-xxl">escolha a sua<span class="color-p01">.</span></h2>
+    <article class="bikes-list">
+        <h2 class="font-1-xxl">escolha a sua<span class="color-p01">.</span></h2>
+
+        <ul>
+            <li>
+                <a href="./bikes/magic.html">
+                    <img src="./img/jpg/bicicletas/magic-home.jpg" alt="Bicicleta preta e fundo cinza">
+                    <h3 class="font-1-xl">Magic Might</h3>
+                    <span class="font-2-m color-08">R$ 2499</span>
+                </a>
+            </li>
+            <li>
+                <a href="./bikes/nimbus.html">
+                    <img src="./img/jpg/bicicletas/nimbus-home.jpg" alt="Bicicleta preta e fundo preto">
+                    <h3 class="font-1-xl">Nimbus Stark</h3>
+                    <span class="font-2-m color-08">R$ 4999</span>
+                </a>
+            </li>
+            <li>
+                <a href="./bikes/nebula.html">
+                    <img src="./img/jpg/bicicletas/nebula-home.jpg" alt="Bicicleta branca e fundo cinza">
+                    <h3 class="font-1-xl">Nebula Cosmic</h3>
+                    <span class="font-2-m color-08">R$ 3999</span>
+                </a>
+            </li>
+        </ul>
+    </article>
 </body>
 </html>
