refactor: added a new component called 'container' to simplify the way to position the projects' area

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header class="header-bg">
-        <div class="header">
+        <div class="header container">
             <a href="./">
                 <img src="./img/svg/bikcraft.svg" alt="Bikcraft">
             </a>
@@ -37,7 +37,7 @@
     </header>
 
     <main class="introduction-bg color-00">
-        <div class="introduction">
+        <div class="introduction container">
             <div class="introduction-content">
                 <h1 class="font-1-xxl">Bicicletas feitas sob medida<span class="color-p01">.</span></h1>
                 <p class="font-2-l color-05">
@@ -54,7 +54,7 @@
     </main>
 
     <article class="bikes-list">
-        <h2 class="font-1-xxl">escolha a sua<span class="color-p01">.</span></h2>
+        <h2 class="container font-1-xxl">escolha a sua<span class="color-p01">.</span></h2>
 
         <ul>
             <li>
