--- a/index.html
+++ b/index.html
@@ -80,5 +80,50 @@
             </li>
         </ul>
     </article>
+
+    <article class="technology-bg">
+        <div class="technology container">
+            <div class="technology-content">
+                <span class="font-2-l-b color-05">Tecnologia Avançada</span>
+                <h2 class="font-1-xxl color-00">você escolhe as suas cores e componentes<span class="color-p01">.</span></h2>
+                <p class="font-2-l color-05">
+                    Cada Bikcraft é única e possui a sua identidade. 
+                    As medidas serão exatas para o seu corpo e 
+                    altura, garantindo maior conforto e ergonomia na 
+                    sua pedalada. Você pode também personalizar 
+                    completamente as suas cores.
+                </p>
+                <a class="link" href="./bikes.html">Escolha um modelo</a>
+
+                <div class="technology-advantages">
+                    <div>
+                        <img src="./img/svg/icones/eletrica.svg" alt="">
+                        <h3 class="font-1-m color-00">Motor Elétrico</h3>
+                        <p class="font-2-s color-05">
+                            Toda Bikcraft é equipada com um 
+                            motor elétrico que possui duração 
+                            de até 120h. A bateria é recarregada 
+                            com a sua energia gasta ao pedalar.
+                        </p>
+                    </div>
+        
+                    <div>
+                        <img src="./img/svg/icones/rastreador.svg" alt="">
+                        <h3 class="font-1-m color-00">Rastreador</h3>
+                        <p class="font-2-s color-05">
+                            Sabemos o quão preciosa é a sua 
+                            Bikcraft, por isso adicionamos 
+                            rastreadores e sistemas anti-furto 
+                            para garantir o seu sossego.
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="technology-image">
+                <img src="./img/jpg/fotos/tecnologia.jpg" alt="">
+            </div>
+        </div>
+    </article>
 </body>
 </html>
