feat(index.html): added the HTML Structure of the partners, it is a section tag and your composition is h2 tag, ul tag, li tags and img tags

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <main class="introduction-bg color-00">
         <div class="introduction container">
             <div class="introduction-content">
-                <h1 class="font-1-xxl">Bicicletas feitas sob medida<span class="color-p01">.</span></h1>
+                <h1 class="font-1-xxl color-00">Bicicletas feitas sob medida<span class="color-p01">.</span></h1>
                 <p class="font-2-l color-05">
                     Bicicletas elétricas de alta precisão e qualidade, 
                     feitas sob medida para o cliente. Explore o 
@@ -125,5 +125,36 @@
             </div>
         </div>
     </article>
+
+    <section class="partners" aria-label="Nossos parceiros">
+        <h2 class="container font-1-xxl">nossos parceiros<span class="color-p01">.</span></h2>
+
+        <ul>
+            <li>
+                <img src="./img/svg/parceiros/caravan.svg" alt="">
+            </li>
+            <li>
+                <img src="./img/svg/parceiros/ranek.svg" alt="">
+            </li>
+            <li>
+                <img src="./img/svg/parceiros/handel.svg" alt="">
+            </li>
+            <li>
+                <img src="./img/svg/parceiros/dogs.svg" alt="">
+            </li>
+            <li>
+                <img src="./img/svg/parceiros/lescone.svg" alt="">
+            </li>
+            <li>
+                <img src="./img/svg/parceiros/flexblog.svg" alt="">
+            </li>
+            <li>
+                <img src="./img/svg/parceiros/wildbeast.svg" alt="">
+            </li>
+            <li>
+                <img src="./img/svg/parceiros/surfbot.svg" alt="">
+            </li>
+        </ul>
+    </section>
 </body>
 </html>
