feat(index.html): added a area of evidence HTML Structure. it is a section tag and you composition it is a image, p tag and span tag

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="header-bg">
@@ -155,6 +155,25 @@
                 <img src="./img/svg/parceiros/surfbot.svg" alt="">
             </li>
         </ul>
+    </section>
+
+    <section class="evidence" aria-label="Depoimento">
+        <div>
+            <img src="./img/jpg/fotos/depoimento.jpg" alt="Pessoa pedalando uma bicicleta Bikcraft">
+        </div>
+
+        <div class="evidence-content">
+            <blockquote class="font-1-xl color-p05">
+                <p>
+                    Pedalar sempre foi a minha 
+                    paixão, o que o pessoal da 
+                    Bikcraft fez foi intensificar o 
+                    meu amor por esta atividade. 
+                    Recomendo à todos que amo.
+                </p>
+            </blockquote>
+            <span class="font-1-m-b color-p04">Ana Júlia</span>
+        </div>
     </section>
 </body>
 </html>
