--- a/index.html
+++ b/index.html
@@ -175,5 +175,41 @@
             <span class="font-1-m-b color-p04">Ana Júlia</span>
         </div>
     </section>
+
+    <article class="insurance-bg">
+        <div class="insurance container">
+            <h2 class="font-1-xxl color-00">seguros<span class="color-p01">.</span></h2>
+
+            <div class="insurance-item">
+                <h3 class="font-1-xl color-06">PRATA</h3>
+                <span class="font-1-xl color-00">R$ 199 <span class="font-1-xs color-06">mensal</span></span>
+                
+                <ul class="font-2-m color-00">
+                    <li>Duas trocas por ano</li>
+                    <li>Assistência técnica</li>
+                    <li>Suporte 08h às 18h</li>
+                    <li>Cobertura estadual</li>
+                </ul>
+
+                <a class="button secondary" href="./budget.html">Inscreva-se</a>
+            </div>
+
+            <div class="insurance-item">
+                <h3 class="font-1-xl color-p01">OURO</h3>
+                <span class="font-1-xl color-00">R$ 299 <span class="font-1-xs color-06">mensal</span></span>
+
+                <ul class="font-2-m color-00">
+                    <li>Cinco trocas por ano</li>
+                    <li>Assistência especial</li>
+                    <li>Suporte 24h</li>
+                    <li>Cobertura nacional</li>
+                    <li>Desconto em parceiros</li>
+                    <li>Acesso ao Clube Bikcraft</li>
+                </ul>
+
+                <a class="button" href="./budget.html">Inscreva-se</a>
+            </div>
+        </div>
+    </article>
 </body>
 </html>
