--- a/index.html
+++ b/index.html
@@ -211,5 +211,61 @@
             </div>
         </div>
     </article>
+
+    <footer class="footer-bg">
+        <div class="footer container">
+            <img src="./img/svg/bikcraft.svg" alt="Bikcraft">
+
+            <div class="footer-contact">
+                <h3 class="font-2-l-b color-00">Contato</h3>
+
+                <ul class="font-2-m color-05">
+                    <li>
+                        <a href="tel:+552199999999">+55 21 99999-9999</a>
+                    </li>
+                    <li>
+                        <a href="mailto:contato@bikcraft.com">contato@bikcraft.com</a>
+                    </li>
+                    <li>Rua Ali Perto, 42 - Aterro do Flamengo</li>
+                    <li>Rio de Janeiro - RJ</li>
+                </ul>
+                
+                <div class="footer-social">
+                    <a href="">
+                        <img src="./img/svg/redes/instagram.svg" alt="Instagram">
+                    </a>
+                    <a href="">
+                        <img src="./img/svg/redes/facebook.svg" alt="Facebook">
+                    </a>
+                    <a href="">
+                        <img src="./img/svg/redes/youtube.svg" alt="Youtube">
+                    </a>
+                </div>
+            </div>
+
+            <div class="footer-information">
+                <h3 class="font-2-l-b color-00">Informação</h3>
+
+                <nav>
+                    <ul class="font-1-m color-05">
+                        <li>
+                            <a href="./bikes.html">Bicicletas</a>
+                        </li>
+                        <li>
+                            <a href="./insurance.html">Seguros</a>
+                        </li>
+                        <li>
+                            <a href="./contact.html">Contatos</a>
+                        </li>
+                        <li>
+                            <a href="./terms.html">Termos e Condições</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+
+            <p class="footer-copy font-2-m color-06">Bikcraft © Alguns direitos reservados.</p>
+        </div>
+    </footer>
 </body>
 </html>
