--- a/bikes.html
+++ b/bikes.html
@@ -77,6 +77,8 @@
                                 Rastreador
                             </li>
                         </ul>
+
+                        <a class="button" href="./bikes/magic.html">Mais Sobre</a>
                     </div>
                 </div>
             </div>
@@ -114,6 +116,8 @@
                                 Rastreador
                             </li>
                         </ul>
+
+                        <a class="button" href="./bikes/magic.html">Mais Sobre</a>
                     </div>
                 </div>
             </div>
@@ -151,6 +155,8 @@
                                 Rastreador
                             </li>
                         </ul>
+
+                        <a class="button" href="./bikes/magic.html">Mais Sobre</a>
                     </div>
                 </div>
             </div>
