feat: added classes called 'arrow' to the <a></a> tags, to stylized them

--- a/bikes.html
+++ b/bikes.html
@@ -77,7 +77,7 @@
                         </li>
                     </ul>
 
-                    <a class="button" href="./bikes/magic.html">Mais Sobre</a>
+                    <a class="button arrow" href="./bikes/nimbus.html">Mais Sobre</a>
                 </div>
             </div>
 
@@ -115,7 +115,7 @@
                             </li>
                         </ul>
 
-                        <a class="button" href="./bikes/magic.html">Mais Sobre</a>
+                        <a class="button arrow" href="./bikes/magic.html">Mais Sobre</a>
                     </div>
                 </div>
             </div>
@@ -153,7 +153,7 @@
                         </li>
                     </ul>
 
-                    <a class="button" href="./bikes/magic.html">Mais Sobre</a>
+                    <a class="button arrow" href="./bikes/nebula.html">Mais Sobre</a>
                 </div>
             </div>
         </main>
