fix: changed the 'href' of the 'a' tags in the footer, area of social medias

--- a/bikes/magic.html
+++ b/bikes/magic.html
@@ -4,7 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Magic Might | Bikcraft</title>
-        <meta name="description" content="Termos e Condições Bikcraft.">
+        <meta name="description" content="A Magic Might é a melhor Bikcraft já criada pela 
+        nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.">
         
         <link rel="stylesheet" href="../css/style.css">
     
