--- a/terms.html
+++ b/terms.html
@@ -107,13 +107,13 @@
                     </ul>
                     
                     <div class="footer-social">
-                        <a href="">
+                        <a href="./">
                             <img src="./img/svg/redes/instagram.svg" alt="Instagram">
                         </a>
-                        <a href="">
+                        <a href="./">
                             <img src="./img/svg/redes/facebook.svg" alt="Facebook">
                         </a>
-                        <a href="">
+                        <a href="./">
                             <img src="./img/svg/redes/youtube.svg" alt="Youtube">
                         </a>
                     </div>
