--- a/insurance.html
+++ b/insurance.html
@@ -4,8 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Seguros | Bikcraft</title>
-        <meta name="description" content="Bicicletas elétricas de alta precisão e qualidade, 
-        feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.">
+        <meta name="description" content="Seguros que você pode encontrar no Bikcraft.">
         
         <link rel="stylesheet" href="./css/style.css">
 
@@ -216,13 +215,13 @@
                     </ul>
                     
                     <div class="footer-social">
-                        <a href="">
+                        <a href="./">
                             <img src="./img/svg/redes/instagram.svg" alt="Instagram">
                         </a>
-                        <a href="">
+                        <a href="./">
                             <img src="./img/svg/redes/facebook.svg" alt="Facebook">
                         </a>
-                        <a href="">
+                        <a href="./">
                             <img src="./img/svg/redes/youtube.svg" alt="Youtube">
                         </a>
                     </div>
