fix: changed the HTML Structure of the page 'contact'. the part of stores was inside a 'main' tag, because that the layout was wrong

--- a/contact.html
+++ b/contact.html
@@ -96,39 +96,43 @@
                         <button class="button expand-col-02">Enviar Mensagem</button>
                     </form>
                 </section>
-
-                <article class="stores container">
-                    <h2 class="font-1-xxl color-00">lojas locais<span class="color-p01">.</span></h2>
-                    <div class="stores-item">
-                        <img src="./img/jpg/lojas/rj.jpg" alt="Mapa marcando o endereço em Rua Ali Perto, 25 - Rio De Janeiro - RJ">
-                        <h3>Rio de Janeiro</h3>
-                        <div class="stores-data font-2-s color-08">
-                            <p>Rua Ali Perto, 25</p>
-                            <p>Rio de Janeiro - RJ</p>
-                        </div>
-                        <div class="stores-data font-2-s color-08">
-                            <a href="mailto:rio@bikcraft.com">rio@bikcraft.com</a>
-                            <a href="tel:+5521999999999">21 99999-9999</a>
-                        </div>
-                        <p><img src="./img/svg/icones/horario.svg" alt="">08-18h de seg à dom</p>
-                    </div>
-
-                    <div class="stores-item">
-                        <img src="./img/jpg/lojas/sp.jpg" alt="Mapa marcando o endereço em Rua Ali Perto, 25 - São Paulo - SP">
-                        <h3>São Paulo</h3>
-                        <div class="stores-data font-2-s color-08">
-                            <p>Rua Ali Perto, 25</p>
-                            <p>São Paulo - SP</p>
-                        </div>
-                        <div class="stores-data font-2-s color-08">
-                            <a href="mailto:rio@bikcraft.com">sp@bikcraft.com</a>
-                            <a href="tel:+5521999999999">11 99999-9999</a>
-                        </div>
-                        <p><img src="./img/svg/icones/horario.svg" alt="">08-18h de seg à dom</p>
-                    </div>
-                </article>
             </div>
         </main>
+
+        <article class="stores container">
+            <h2 class="font-1-xxl">lojas locais<span class="color-p01">.</span></h2>
+            <div class="stores-item">
+                <img src="./img/jpg/lojas/rj.jpg" alt="Mapa marcando o endereço em Rua Ali Perto, 25 - Rio De Janeiro - RJ">
+                <div class="stores-content">
+                    <h3 class="font-1-xl">Rio de Janeiro</h3>
+                    <div class="stores-data font-2-s color-08">
+                        <p>Rua Ali Perto, 25</p>
+                        <p>Rio de Janeiro - RJ</p>
+                    </div>
+                    <div class="stores-data font-2-s color-08">
+                        <a href="mailto:rio@bikcraft.com">rio@bikcraft.com</a>
+                        <a href="tel:+5521999999999">21 99999-9999</a>
+                    </div>
+                    <p class="stores-time font-1-s"><img src="./img/svg/icones/horario.svg" alt="">08-18h de seg à dom</p>
+                </div>
+            </div>
+
+            <div class="stores-item">
+                <img src="./img/jpg/lojas/sp.jpg" alt="Mapa marcando o endereço em Rua Ali Perto, 25 - São Paulo - SP">
+                <div class="stores-content">
+                    <h3 class="font-1-xl">São Paulo</h3>
+                    <div class="stores-data font-2-s color-08">
+                        <p>Rua Ali Perto, 25</p>
+                        <p>São Paulo - SP</p>
+                    </div>
+                    <div class="stores-data font-2-s color-08">
+                        <a href="mailto:rio@bikcraft.com">sp@bikcraft.com</a>
+                        <a href="tel:+5521999999999">11 99999-9999</a>
+                    </div>
+                    <p class="stores-time font-1-s"><img src="./img/svg/icones/horario.svg" alt="">08-18h de seg à dom</p>
+                </div>
+            </div>
+        </article>
 
         <footer class="footer-bg">
             <div class="footer container">
