feat: added the 'width' and 'height' attribute in the 'img' tags throughout the application to keep the page layout stable while images load

--- a/bikes.html
+++ b/bikes.html
@@ -18,7 +18,7 @@
         <header class="header-bg">
             <div class="header container">
                 <a href="./">
-                    <img src="./img/svg/bikcraft.svg" alt="Bikcraft">
+                    <img src="./img/svg/bikcraft.svg" width="136" height="32" alt="Bikcraft">
                 </a>
 
                 <nav aria-label="primary">
@@ -47,7 +47,7 @@
 
             <div class="bikes container">
                 <div class="bikes-image">
-                    <img src="./img/jpg/bicicletas/nimbus.jpg" alt="Bicicleta preta">
+                    <img src="./img/jpg/bicicletas/nimbus.jpg" width="1120" height="680" alt="Bicicleta preta">
                     <span class="font-2-m color-00">R$ 4999</span>
                 </div>
 
@@ -61,19 +61,19 @@
 
                     <ul class="font-1-m color-08">
                         <li>
-                            <img src="./img/svg/icones/eletrica.svg" alt="">
+                            <img src="./img/svg/icones/eletrica.svg" width="32" height="32" alt="">
                             Motor Elétrico
                         </li>
                         <li>
-                            <img src="./img/svg/icones/carbono.svg" alt="">
+                            <img src="./img/svg/icones/carbono.svg" width="32" height="32" alt="">
                             Fibra de Carbono
                         </li>
                         <li>
-                            <img src="./img/svg/icones/velocidade.svg" alt="">
+                            <img src="./img/svg/icones/velocidade.svg" width="32" height="32" alt="">
                             50 km/h
                         </li>
                         <li>
-                            <img src="./img/svg/icones/rastreador.svg" alt="">
+                            <img src="./img/svg/icones/rastreador.svg" width="32" height="32" alt="">
                             Rastreador
                         </li>
                     </ul>
@@ -85,7 +85,7 @@
             <div class="bikes-bg">
                 <div class="bikes container">
                     <div class="bikes-image">
-                        <img src="./img/jpg/bicicletas/magic.jpg" alt="Bicicleta preta">
+                        <img src="./img/jpg/bicicletas/magic.jpg" width="1120" height="680" alt="Bicicleta preta">
                         <span class="font-2-m color-00">R$ 2499</span>
                     </div>
 
@@ -99,19 +99,19 @@
 
                         <ul class="font-1-m color-05">
                             <li>
-                                <img src="./img/svg/icones/eletrica.svg" alt="">
+                                <img src="./img/svg/icones/eletrica.svg" width="32" height="32" alt="">
                                 Motor Elétrico
                             </li>
                             <li>
-                                <img src="./img/svg/icones/carbono.svg" alt="">
+                                <img src="./img/svg/icones/carbono.svg" width="32" height="32" alt="">
                                 Fibra de Carbono
                             </li>
                             <li>
-                                <img src="./img/svg/icones/velocidade.svg" alt="">
+                                <img src="./img/svg/icones/velocidade.svg" width="32" height="32" alt="">
                                 45 km/h
                             </li>
                             <li>
-                                <img src="./img/svg/icones/rastreador.svg" alt="">
+                                <img src="./img/svg/icones/rastreador.svg" width="32" height="32" alt="">
                                 Rastreador
                             </li>
                         </ul>
@@ -123,7 +123,7 @@
 
             <div class="bikes container">
                 <div class="bikes-image">
-                    <img src="./img/jpg/bicicletas/nebula.jpg" alt="Bicicleta preta">
+                    <img src="./img/jpg/bicicletas/nebula.jpg" width="1120" height="680" alt="Bicicleta preta">
                     <span class="font-2-m color-00">R$ 3999</span>
                 </div>
 
@@ -137,19 +137,19 @@
 
                     <ul class="font-1-m color-08">
                         <li>
-                            <img src="./img/svg/icones/eletrica.svg" alt="">
+                            <img src="./img/svg/icones/eletrica.svg" width="32" height="32" alt="">
                             Motor Elétrico
                         </li>
                         <li>
-                            <img src="./img/svg/icones/carbono.svg" alt="">
+                            <img src="./img/svg/icones/carbono.svg" width="32" height="32" alt="">
                             Fibra de Carbono
                         </li>
                         <li>
-                            <img src="./img/svg/icones/velocidade.svg" alt="">
+                            <img src="./img/svg/icones/velocidade.svg" width="32" height="32" alt="">
                             40 km/h
                         </li>
                         <li>
-                            <img src="./img/svg/icones/rastreador.svg" alt="">
+                            <img src="./img/svg/icones/rastreador.svg" width="32" height="32" alt="">
                             Rastreador
                         </li>
                     </ul>
@@ -161,7 +161,7 @@
 
         <footer class="footer-bg">
             <div class="footer container">
-                <img src="./img/svg/bikcraft.svg" alt="Bikcraft">
+                <img src="./img/svg/bikcraft.svg" width="136" height="32" alt="Bikcraft">
 
                 <div class="footer-contact">
                     <h3 class="font-2-l-b color-00">Contato</h3>
@@ -179,13 +179,13 @@
                     
                     <div class="footer-social">
                         <a href="./">
-                            <img src="./img/svg/redes/instagram.svg" alt="Instagram">
+                            <img src="./img/svg/redes/instagram.svg" width="32" height="32" alt="Instagram">
                         </a>
                         <a href="./">
-                            <img src="./img/svg/redes/facebook.svg" alt="Facebook">
+                            <img src="./img/svg/redes/facebook.svg" width="32" height="32" alt="Facebook">
                         </a>
                         <a href="./">
-                            <img src="./img/svg/redes/youtube.svg" alt="Youtube">
+                            <img src="./img/svg/redes/youtube.svg" width="32" height="32" alt="Youtube">
                         </a>
                     </div>
                 </div>
