--- a/bikes/nebula.html
+++ b/bikes/nebula.html
@@ -17,7 +17,7 @@
         <header class="header-bg">
             <div class="header container">
                 <a href="../">
-                    <img src="../img/svg/bikcraft.svg" alt="Bikcraft">
+                    <img src="../img/svg/bikcraft.svg" width="136" height="32" alt="Bikcraft">
                 </a>
     
                 <nav aria-label="primary">
@@ -46,9 +46,9 @@
 
             <div class="bike container">
                 <div class="bike-images">
-                    <img src="../img/jpg/bicicleta/nimbus3.jpg" alt="">
-                    <img src="../img/jpg/bicicleta/nimbus1.jpg" alt="">
-                    <img src="../img/jpg/bicicleta/nimbus2.jpg" alt="">
+                    <img src="../img/jpg/bicicleta/nimbus3.jpg" width="1120" height="880" alt="">
+                    <img src="../img/jpg/bicicleta/nimbus1.jpg" width="1120" height="880" alt="">
+                    <img src="../img/jpg/bicicleta/nimbus2.jpg" width="1120" height="880" alt="">
                 </div>
 
                 <div class="bike-content">
@@ -60,11 +60,11 @@
                     <div class="bike-buy">
                         <a class="button" href="../budget.html">Comprar Agora</a>
                         <span class="font-1-xs color-06">
-                            <img src="../img/svg/icones/entrega.svg" alt="">
+                            <img src="../img/svg/icones/entrega.svg" width="16" height="16" alt="">
                             entrega em 5 dias
                         </span>
                         <span class="font-1-xs color-06">
-                            <img src="../img/svg/icones/estoque.svg" alt="">
+                            <img src="../img/svg/icones/estoque.svg" width="16" height="16" alt="">
                             18 em estoque
                         </span>
                     </div>
@@ -72,7 +72,7 @@
                     <h2 class="font-1-xs color-00">Informações</h2>
                     <ul class="bike-informations">
                         <li>
-                            <img src="../img/svg/icones/eletrica.svg" alt="">
+                            <img src="../img/svg/icones/eletrica.svg" width="32" height="32" alt="">
                             <h3 class="font-1-m color-00">Motor Elétrico</h3>
                             <p class="font-2-xs color-05">
                                 Permite você viajar distâncias 
@@ -80,7 +80,7 @@
                             </p>
                         </li>
                         <li>
-                            <img src="../img/svg/icones/velocidade.svg" alt="">
+                            <img src="../img/svg/icones/velocidade.svg" width="32" height="32" alt="">
                             <h3 class="font-1-m color-00">40 km/h</h3>
                             <p class="font-2-xs color-05">
                                 A mais rápida bicicleta elétrica 
@@ -88,7 +88,7 @@
                             </p>
                         </li>
                         <li>
-                            <img src="../img/svg/icones/rastreador.svg" alt="">
+                            <img src="../img/svg/icones/rastreador.svg" width="32" height="32" alt="">
                             <h3 class="font-1-m color-00">Rastreador</h3>
                             <p class="font-2-xs color-05">
                                 Rastreador e sistema anti-furto 
@@ -96,7 +96,7 @@
                             </p>
                         </li>
                         <li>
-                            <img src="../img/svg/icones/carbono.svg" alt="">
+                            <img src="../img/svg/icones/carbono.svg" width="32" height="32" alt="">
                             <h3 class="font-1-m color-00">Fibra de Carbono</h3>
                             <p class="font-2-xs color-05">
                                 Maior proteção possível para a 
@@ -142,14 +142,14 @@
             <ul>
                 <li>
                     <a href="./magic.html">
-                        <img src="../img/jpg/bicicletas/nimbus.jpg" alt="Bicicleta preta e fundo cinza">
+                        <img src="../img/jpg/bicicletas/nimbus.jpg" width="1120" height="680" alt="Bicicleta preta e fundo cinza">
                         <h3 class="font-1-xl">Nimbus Stark</h3>
                         <span class="font-2-m color-08">R$ 4999</span>
                     </a>
                 </li>
                 <li>
                     <a href="./nebula.html">
-                        <img src="../img/jpg/bicicletas/magic.jpg" alt="Bicicleta branca e fundo cinza">
+                        <img src="../img/jpg/bicicletas/magic.jpg" width="1120" height="680" alt="Bicicleta branca e fundo cinza">
                         <h3 class="font-1-xl">Magic Might</h3>
                         <span class="font-2-m color-08">R$ 2499</span>
                     </a>
@@ -160,7 +160,7 @@
         <article class="bike-insurance__bg">
             <div class="bike-insurance container">
                 <div class="bike-insurance__image">
-                    <img src="../img/jpg/fotos/seguros.jpg" alt="Pessoa parada em cima de uma bicicleta">
+                    <img src="../img/jpg/fotos/seguros.jpg" width="1360" height="1512" alt="Pessoa parada em cima de uma bicicleta">
                 </div>
 
                 <div class="bike-insurance__content">
@@ -180,7 +180,7 @@
 
         <footer class="footer-bg">
             <div class="footer container">
-                <img src="../img/svg/bikcraft.svg" alt="Bikcraft">
+                <img src="../img/svg/bikcraft.svg" width="136" height="32" alt="Bikcraft">
 
                 <div class="footer-contact">
                     <h3 class="font-2-l-b color-00">Contato</h3>
@@ -198,13 +198,13 @@
                     
                     <div class="footer-social">
                         <a href="">
-                            <img src="../img/svg/redes/instagram.svg" alt="Instagram">
+                            <img src="../img/svg/redes/instagram.svg" width="32" height="32" alt="Instagram">
                         </a>
                         <a href="">
-                            <img src="../img/svg/redes/facebook.svg" alt="Facebook">
+                            <img src="../img/svg/redes/facebook.svg" width="32" height="32" alt="Facebook">
                         </a>
                         <a href="">
-                            <img src="../img/svg/redes/youtube.svg" alt="Youtube">
+                            <img src="../img/svg/redes/youtube.svg" width="32" height="32" alt="Youtube">
                         </a>
                     </div>
                 </div>
