--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header class="header-bg">
             <div class="header container">
                 <a href="./">
-                    <img src="./img/svg/bikcraft.svg" alt="Bikcraft">
+                    <img src="./img/svg/bikcraft.svg" width="136" height="32" alt="Bikcraft">
                 </a>
 
                 <nav aria-label="primary">
@@ -48,9 +48,10 @@
                     </p>
                     <a class="button" href="./bikes.html">Selecione a sua</a>
                 </div>
-                <div>
-                    <img src="./img/jpg/fotos/introducao.jpg" alt="Bicicleta elétrica preta.">
-                </div>
+                <picture>
+                    <source media="(max-width: 800px)" srcset="./img/jpg/bicicletas/nimbus.jpg">
+                    <img src="./img/jpg/fotos/introducao.jpg" width="1280" height="1600" alt="Bicicleta elétrica preta.">
+                </picture>
             </div>
         </main>
 
@@ -60,21 +61,21 @@
             <ul>
                 <li>
                     <a href="./bikes/magic.html">
-                        <img src="./img/jpg/bicicletas/magic-home.jpg" alt="Bicicleta preta e fundo cinza">
+                        <img src="./img/jpg/bicicletas/magic-home.jpg" width="920" height="1040" alt="Bicicleta preta e fundo cinza">
                         <h3 class="font-1-xl">Magic Might</h3>
                         <span class="font-2-m color-08">R$ 2499</span>
                     </a>
                 </li>
                 <li>
                     <a href="./bikes/nimbus.html">
-                        <img src="./img/jpg/bicicletas/nimbus-home.jpg" alt="Bicicleta preta e fundo preto">
+                        <img src="./img/jpg/bicicletas/nimbus-home.jpg" width="920" height="1040" alt="Bicicleta preta e fundo preto">
                         <h3 class="font-1-xl">Nimbus Stark</h3>
                         <span class="font-2-m color-08">R$ 4999</span>
                     </a>
                 </li>
                 <li>
                     <a href="./bikes/nebula.html">
-                        <img src="./img/jpg/bicicletas/nebula-home.jpg" alt="Bicicleta branca e fundo cinza">
+                        <img src="./img/jpg/bicicletas/nebula-home.jpg" width="920" height="1040" alt="Bicicleta branca e fundo cinza">
                         <h3 class="font-1-xl">Nebula Cosmic</h3>
                         <span class="font-2-m color-08">R$ 3999</span>
                     </a>
@@ -98,7 +99,7 @@
 
                     <div class="technology-advantages">
                         <div>
-                            <img src="./img/svg/icones/eletrica.svg" alt="">
+                            <img src="./img/svg/icones/eletrica.svg" width="24" height="24" alt="">
                             <h3 class="font-1-m color-00">Motor Elétrico</h3>
                             <p class="font-2-s color-05">
                                 Toda Bikcraft é equipada com um 
@@ -109,7 +110,7 @@
                         </div>
             
                         <div>
-                            <img src="./img/svg/icones/rastreador.svg" alt="">
+                            <img src="./img/svg/icones/rastreador.svg" width="24" height="24" alt="">
                             <h3 class="font-1-m color-00">Rastreador</h3>
                             <p class="font-2-s color-05">
                                 Sabemos o quão preciosa é a sua 
@@ -122,7 +123,7 @@
                 </div>
 
                 <div class="technology-image">
-                    <img src="./img/jpg/fotos/tecnologia.jpg" alt="">
+                    <img src="./img/jpg/fotos/tecnologia.jpg" width="1200" height="1920" alt="">
                 </div>
             </div>
         </article>
@@ -132,35 +133,35 @@
 
             <ul>
                 <li>
-                    <img src="./img/svg/parceiros/caravan.svg" alt="">
+                    <img src="./img/svg/parceiros/caravan.svg" width="140" height="38" alt="">
                 </li>
                 <li>
-                    <img src="./img/svg/parceiros/ranek.svg" alt="">
+                    <img src="./img/svg/parceiros/ranek.svg" width="149" height="36"  alt="">
                 </li>
                 <li>
-                    <img src="./img/svg/parceiros/handel.svg" alt="">
+                    <img src="./img/svg/parceiros/handel.svg" width="139" height="50"  alt="">
                 </li>
                 <li>
-                    <img src="./img/svg/parceiros/dogs.svg" alt="">
+                    <img src="./img/svg/parceiros/dogs.svg" width="152" height="39"  alt="">
                 </li>
                 <li>
-                    <img src="./img/svg/parceiros/lescone.svg" alt="">
+                    <img src="./img/svg/parceiros/lescone.svg" width="208" height="41"  alt="">
                 </li>
                 <li>
-                    <img src="./img/svg/parceiros/flexblog.svg" alt="">
+                    <img src="./img/svg/parceiros/flexblog.svg" width="165" height="38"  alt="">
                 </li>
                 <li>
-                    <img src="./img/svg/parceiros/wildbeast.svg" alt="">
+                    <img src="./img/svg/parceiros/wildbeast.svg" width="196" height="34"  alt="">
                 </li>
                 <li>
-                    <img src="./img/svg/parceiros/surfbot.svg" alt="">
+                    <img src="./img/svg/parceiros/surfbot.svg" width="200" height="49"  alt="">
                 </li>
             </ul>
         </section>
 
         <section class="evidence" aria-label="Depoimento">
             <div>
-                <img src="./img/jpg/fotos/depoimento.jpg" alt="Pessoa pedalando uma bicicleta Bikcraft">
+                <img src="./img/jpg/fotos/depoimento.jpg" width="1560" height="1360" alt="Pessoa pedalando uma bicicleta Bikcraft">
             </div>
 
             <div class="evidence-content">
@@ -215,7 +216,7 @@
 
         <footer class="footer-bg">
             <div class="footer container">
-                <img src="./img/svg/bikcraft.svg" alt="Bikcraft">
+                <img src="./img/svg/bikcraft.svg" width="136" height="32" alt="Bikcraft">
 
                 <div class="footer-contact">
                     <h3 class="font-2-l-b color-00">Contato</h3>
@@ -233,13 +234,13 @@
                     
                     <div class="footer-social">
                         <a href="./">
-                            <img src="./img/svg/redes/instagram.svg" alt="Instagram">
+                            <img src="./img/svg/redes/instagram.svg" width="32" height="32" alt="Instagram">
                         </a>
                         <a href="./">
-                            <img src="./img/svg/redes/facebook.svg" alt="Facebook">
+                            <img src="./img/svg/redes/facebook.svg" width="32" height="32" alt="Facebook">
                         </a>
                         <a href="./">
-                            <img src="./img/svg/redes/youtube.svg" alt="Youtube">
+                            <img src="./img/svg/redes/youtube.svg" width="32" height="32" alt="Youtube">
                         </a>
                     </div>
                 </div>
