--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
         <header class="header-bg">
             <div class="header container">
                 <a href="./">
-                    <img src="./img/svg/bikcraft.svg" alt="Bikcraft">
+                    <img src="./img/svg/bikcraft.svg" width="136" height="32" alt="Bikcraft">
                 </a>
     
                 <nav aria-label="primary">
@@ -61,13 +61,13 @@
 
                     <div class="contact-social">
                         <a href="./">
-                            <img src="./img/svg/redes/instagram-p.svg" alt="Instagram">
+                            <img src="./img/svg/redes/instagram-p.svg" width="32" height="32" alt="Instagram">
                         </a>
                         <a href="./">
-                            <img src="./img/svg/redes/facebook-p.svg" alt="Facebook">
+                            <img src="./img/svg/redes/facebook-p.svg" width="32" height="32" alt="Facebook">
                         </a>
                         <a href="./">
-                            <img src="./img/svg/redes/youtube-p.svg" alt="Youtube">
+                            <img src="./img/svg/redes/youtube-p.svg" width="32" height="32" alt="Youtube">
                         </a>
                     </div>
                 </section>
@@ -103,7 +103,7 @@
         <article class="stores container">
             <h2 class="font-1-xxl">lojas locais<span class="color-p01">.</span></h2>
             <div class="stores-item">
-                <img src="./img/jpg/lojas/rj.jpg" alt="Mapa marcando o endereço em Rua Ali Perto, 25 - Rio De Janeiro - RJ">
+                <img src="./img/jpg/lojas/rj.jpg" width="1120" height="520" alt="Mapa marcando o endereço em Rua Ali Perto, 25 - Rio De Janeiro - RJ">
                 <div class="stores-content">
                     <h3 class="font-1-xl">Rio de Janeiro</h3>
                     <div class="stores-data font-2-s color-08">
@@ -114,12 +114,12 @@
                         <a href="mailto:rio@bikcraft.com">rio@bikcraft.com</a>
                         <a href="tel:+5521999999999">21 99999-9999</a>
                     </div>
-                    <p class="stores-time font-1-s"><img src="./img/svg/icones/horario.svg" alt="">08-18h de seg à dom</p>
+                    <p class="stores-time font-1-s"><img src="./img/svg/icones/horario.svg" width="20" height="20" alt="">08-18h de seg à dom</p>
                 </div>
             </div>
 
             <div class="stores-item">
-                <img src="./img/jpg/lojas/sp.jpg" alt="Mapa marcando o endereço em Rua Ali Perto, 25 - São Paulo - SP">
+                <img src="./img/jpg/lojas/sp.jpg" width="1120" height="520" alt="Mapa marcando o endereço em Rua Ali Perto, 25 - São Paulo - SP">
                 <div class="stores-content">
                     <h3 class="font-1-xl">São Paulo</h3>
                     <div class="stores-data font-2-s color-08">
@@ -130,14 +130,14 @@
                         <a href="mailto:rio@bikcraft.com">sp@bikcraft.com</a>
                         <a href="tel:+5521999999999">11 99999-9999</a>
                     </div>
-                    <p class="stores-time font-1-s"><img src="./img/svg/icones/horario.svg" alt="">08-18h de seg à dom</p>
+                    <p class="stores-time font-1-s"><img src="./img/svg/icones/horario.svg" width="20" height="20" alt="">08-18h de seg à dom</p>
                 </div>
             </div>
         </article>
 
         <footer class="footer-bg">
             <div class="footer container">
-                <img src="./img/svg/bikcraft.svg" alt="Bikcraft">
+                <img src="./img/svg/bikcraft.svg" width="136" height="32" alt="Bikcraft">
 
                 <div class="footer-contact">
                     <h3 class="font-2-l-b color-00">Contato</h3>
@@ -155,13 +155,13 @@
                     
                     <div class="footer-social">
                         <a href="./">
-                            <img src="./img/svg/redes/instagram.svg" alt="Instagram">
+                            <img src="./img/svg/redes/instagram.svg" width="32" height="32" alt="Instagram">
                         </a>
                         <a href="./">
-                            <img src="./img/svg/redes/facebook.svg" alt="Facebook">
+                            <img src="./img/svg/redes/facebook.svg" width="32" height="32" alt="Facebook">
                         </a>
                         <a href="./">
-                            <img src="./img/svg/redes/youtube.svg" alt="Youtube">
+                            <img src="./img/svg/redes/youtube.svg" width="32" height="32" alt="Youtube">
                         </a>
                     </div>
                 </div>
