--- a/insurance.html
+++ b/insurance.html
@@ -17,7 +17,7 @@
         <header class="header-bg">
             <div class="header container">
                 <a href="./">
-                    <img src="./img/svg/bikcraft.svg" alt="Bikcraft">
+                    <img src="./img/svg/bikcraft.svg" width="136" height="32" alt="Bikcraft">
                 </a>
 
                 <nav aria-label="primary">
@@ -83,7 +83,7 @@
 
                 <ul>
                     <li>
-                        <img src="./img/svg/icones/eletrica.svg" alt="">
+                        <img src="./img/svg/icones/eletrica.svg" width="32" height="32" alt="">
                         <h3 class="font-1-l color-00">Reparo Elétrico</h3>
                         <p class="font-2-s color-05">
                             Garantimos o reparo completo do seu motor 
@@ -92,7 +92,7 @@
                         </p>
                     </li>
                     <li>
-                        <img src="./img/svg/icones/carbono.svg" alt="">
+                        <img src="./img/svg/icones/carbono.svg" width="32" height="32" alt="">
                         <h3 class="font-1-l color-00">Carbono</h3>
                         <p class="font-2-s color-05">
                             Nossos quadros são feitos para durar para 
@@ -101,7 +101,7 @@
                         </p>
                     </li>
                     <li>
-                        <img src="./img/svg/icones/sustentavel.svg" alt="">
+                        <img src="./img/svg/icones/sustentavel.svg" width="32" height="32" alt="">
                         <h3 class="font-1-l color-00">Sustentável</h3>
                         <p class="font-2-s color-05">
                             Trabalhamos com a filosofia de desperdício 
@@ -110,7 +110,7 @@
                         </p>
                     </li>
                     <li>
-                        <img src="./img/svg/icones/rastreador.svg" alt="">
+                        <img src="./img/svg/icones/rastreador.svg" width="32" height="32" alt="">
                         <h3 class="font-1-l color-00">Rastreador</h3>
                         <p class="font-2-s color-05">
                             Utilizamos o GPS da sua Bikcraft em 
@@ -119,7 +119,7 @@
                         </p>
                     </li>
                     <li>
-                        <img src="./img/svg/icones/seguro.svg" alt="">
+                        <img src="./img/svg/icones/seguro.svg" width="32" height="32" alt="">
                         <h3 class="font-1-l color-00">Segurança</h3>
                         <p class="font-2-s color-05">
                             Com o seguro Bikcraft você pode 
@@ -129,7 +129,7 @@
                         </p>
                     </li>
                     <li>
-                        <img src="./img/svg/icones/velocidade.svg" alt="">
+                        <img src="./img/svg/icones/velocidade.svg" width="32" height="32" alt="">
                         <h3 class="font-1-l color-00">Rapidez</h3>
                         <p class="font-2-s color-05">
                             A sua Bikcraft ficará pronta para uso no 
@@ -199,7 +199,7 @@
 
         <footer class="footer-bg">
             <div class="footer container">
-                <img src="./img/svg/bikcraft.svg" alt="Bikcraft">
+                <img src="./img/svg/bikcraft.svg" width="136" height="32" alt="Bikcraft">
 
                 <div class="footer-contact">
                     <h3 class="font-2-l-b color-00">Contato</h3>
@@ -217,13 +217,13 @@
                     
                     <div class="footer-social">
                         <a href="./">
-                            <img src="./img/svg/redes/instagram.svg" alt="Instagram">
+                            <img src="./img/svg/redes/instagram.svg" width="32" height="32" alt="Instagram">
                         </a>
                         <a href="./">
-                            <img src="./img/svg/redes/facebook.svg" alt="Facebook">
+                            <img src="./img/svg/redes/facebook.svg" width="32" height="32" alt="Facebook">
                         </a>
                         <a href="./">
-                            <img src="./img/svg/redes/youtube.svg" alt="Youtube">
+                            <img src="./img/svg/redes/youtube.svg" width="32" height="32" alt="Youtube">
                         </a>
                     </div>
                 </div>
