--- a/terms.html
+++ b/terms.html
@@ -17,7 +17,7 @@
         <header class="header-bg">
             <div class="header container">
                 <a href="./">
-                    <img src="./img/svg/bikcraft.svg" alt="Bikcraft">
+                    <img src="./img/svg/bikcraft.svg" width="136" height="32" alt="Bikcraft">
                 </a>
     
                 <nav aria-label="primary">
@@ -91,7 +91,7 @@
 
         <footer class="footer-bg">
             <div class="footer container">
-                <img src="./img/svg/bikcraft.svg" alt="Bikcraft">
+                <img src="./img/svg/bikcraft.svg" width="136" height="32" alt="Bikcraft">
 
                 <div class="footer-contact">
                     <h3 class="font-2-l-b color-00">Contato</h3>
@@ -109,13 +109,13 @@
                     
                     <div class="footer-social">
                         <a href="./">
-                            <img src="./img/svg/redes/instagram.svg" alt="Instagram">
+                            <img src="./img/svg/redes/instagram.svg" width="32" height="32" alt="Instagram">
                         </a>
                         <a href="./">
-                            <img src="./img/svg/redes/facebook.svg" alt="Facebook">
+                            <img src="./img/svg/redes/facebook.svg" width="32" height="32" alt="Facebook">
                         </a>
                         <a href="./">
-                            <img src="./img/svg/redes/youtube.svg" alt="Youtube">
+                            <img src="./img/svg/redes/youtube.svg" width="32" height="32" alt="Youtube">
                         </a>
                     </div>
                 </div>
