fix: added a 'alt' to the three 'img' tags in each bike page

--- a/bikes/nimbus.html
+++ b/bikes/nimbus.html
@@ -46,9 +46,9 @@
 
             <div class="bike container">
                 <div class="bike-images">
-                    <img src="../img/jpg/bicicleta/nimbus1.jpg" width="1120" height="880" alt="">
-                    <img src="../img/jpg/bicicleta/nimbus2.jpg" width="1120" height="880" alt="">
-                    <img src="../img/jpg/bicicleta/nimbus3.jpg" width="1120" height="880" alt="">
+                    <img src="../img/jpg/bicicleta/nimbus1.jpg" width="1120" height="880" alt="Bicicleta Preta 1">
+                    <img src="../img/jpg/bicicleta/nimbus2.jpg" width="1120" height="880" alt="Bicicleta Preta 2">
+                    <img src="../img/jpg/bicicleta/nimbus3.jpg" width="1120" height="880" alt="Bicicleta Branca">
                 </div>
 
                 <div class="bike-content">
