feat: added a script to select the right product automatically according to the url. example: a person select a bike called 'nimbus' and advance to buy, this person will be directed to the form selecting that bike

--- a/bikes/magic.html
+++ b/bikes/magic.html
@@ -58,7 +58,7 @@
                         acessórios, o que garante maior velocidade.
                     </p>
                     <div class="bike-buy">
-                        <a class="button" href="../budget.html">Comprar Agora</a>
+                        <a class="button" href="../budget.html?type=bikcraft&product=magic">Comprar Agora</a>
                         <span class="font-1-xs color-06">
                             <img src="../img/svg/icones/entrega.svg" width="16" height="16" alt="">
                             entrega em 5 dias
